chore(scrollbar): solve overflow prob 2

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ FOOTER SECTION
      background: #f0f0f0;
  }
 
+ body::-webkit-scrollbar {
+     display: none;
+ }
+
  .white {
      color: #ffffff;
  }
